--- a/style.css
+++ b/style.css
@@ -252,8 +252,32 @@
       color: #f1f1f1; 
     }
 
+    .info-text {
+      color: #333;
+    }
+
+    .info-text.red {
+      color: #ff4d4d;
+    }
+
+    .info-text.blue {
+      color: #42a5f5;
+    }
+
     body.dark-mode .info-text {
       color: #f1f1f1; 
+    }
+
+    body.dark-mode .info-text.red {
+      color: #ff4d4d; 
+    }
+
+    body.dark-mode .info-text.blue {
+      color: #42a5f5; 
+    }
+
+    body.dark-mode .info-text:not(.red) {
+      color: #ccc; 
     }
 
     .recovery-text {
