--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@
     }
 
     #exchangeModal button {
-      background-color: #f44336;
+      background-color: #ff4d4d;
       color: white;
       border: none;
       padding: 12px 25px;
@@ -293,7 +293,7 @@
     }
 
     .info-modal button {
-      background-color: #f44336;
+      background-color: #ff4d4d;
       color: white;
       border: none;
       padding: 12px 25px;
